# app_excel

./: ACTIVIDAD_3_README.md  pyproject.toml
src/: Futbol.py  el_club.py  main.py
tests/: __init__.py
